# dataloadkit

./: .gitignore  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  pyproject.toml
.cursor/: BUGBOT.md
.cursor/rules/: spec-driven-enforcer.mdc  spec-planning-enforcer.mdc  technical-writer.mdc
.github/workflows/: ci.yml
dlk/: __init__.py
dlk/adapters/: __init__.py
dlk/api/: __init__.py
dlk/builders/: __init__.py
dlk/connectors/: __init__.py  sql.py
dlk/core/: __init__.py  destination_config.py  extract_config.py  load_config.py  plan.py  source_config.py  types.py  validation.py
dlk/results/: __init__.py  result.py
spec/: README.md
spec/_template/: DESIGN.md  REQUIREMENTS.md
spec/_template/tasks/: 1_scaffold.plan.md
spec/mvp/: DESIGN.md  REQUIREMENTS.md
spec/mvp/tasks/: 1_scaffold.plan.md  2_core-models.plan.md  3_sql-connector.plan.md  4_s3-connector.plan.md  5_dlt-adapter.plan.md  6_builders.plan.md  7_public-api.plan.md  8_integration-tests.plan.md
tests/: test_import.py
tests/connectors/: test_connectors_package.py  test_sql.py
tests/core/: test_models.py  test_validation.py
