[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataloadkit"
version = "0.1.0"
description = "Fluent data load planning and execution via dlt."
readme = "README.md"
requires-python = ">=3.9.2,<3.15"
authors = [{ name = "dataloadkit contributors" }]
dependencies = [
    "dlt>=1.15.0",
    "eval-type-backport>=0.3.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
redshift = ["dlt[redshift]"]
postgres = ["dlt[postgres]"]
filesystem = ["dlt[filesystem]"]
sftp = ["dlt[sftp]"]
mvp = ["dlt[redshift,postgres,filesystem,sftp]"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dlk"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["dlk", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
packages = ["dlk"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
